--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -13,6 +13,10 @@ a {
 }
 img {
 	border:0 none;
+        outline: none;
+}
+input {
+  outline: none;
 }
 .float-L {
 	float:left;
@@ -84,7 +88,7 @@ margin:0;
 .login-btn {
 	
 	height:28px;
-	padding-top:30px;
+	padding-top:28px;
         margin-top:10px;
 }
 .login-btn-lft {
@@ -298,10 +302,10 @@ float:left;
 	-webkit-border-radius:5px;
 	-moz-border-radius:5px;
 	-o-border-radius:5px;
-	box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
+	/*box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
 	-webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
-	-o-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
+	-o-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);*/
 	padding-bottom:1px;
 	margin-bottom:20px;
 min-height:333px;
@@ -407,6 +411,8 @@ min-height:333px;
 	background:url(../images/footer-bg-new.png) repeat;
 	margin-top:20px;
 	border-top:1px solid #d5d5d5;
+        position: relative;
+        float: left;
 }
 .footer-inner
 {
@@ -491,7 +497,7 @@ float:left;
 #edit-search{
 float:left;
 margin-top:13px;
-margin-left:10px;
+margin-left:0px;
 }
 #tabs-wrapper{
 border:none !important;
@@ -726,7 +732,7 @@ display:none !important;
 }
 .one-sidebar #center .content{
 border:none !important;
-width:416px !important;
+width:415px !important;
 float:left;
 -webkit-box-shadow: none !important; 
 	-moz-box-shadow: none !important; 
@@ -959,6 +965,9 @@ width:388px!important;
 .chzn-container-single .chzn-single{
 width:299px!important;
 height:39px!important; 
+background-image: none!important;
+border: 2px solid #EEF1F2!important;
+
 /* padding:0 10px; */
 }
 .chzn-drop {
@@ -1005,13 +1014,14 @@ font-weight:bold;
 }
 
 .chzn-container-single .chzn-single div{
-padding:8px!important; 
- 
+padding:6px 8px 5px 8px!important; 
+background: none!important;
+border-left: 1px solid #EEF1F2;
 }
 
 
 #branding img{
-margin-top:25px!important; 
+margin-top:24px!important; 
 margin-left:-8px;
 padding-top:0px!important;
 }
@@ -1951,6 +1961,7 @@ text-align:justify;
 .region-sidebar-second .content .prev_img_details {
     border: 1px solid #ccc;
     padding: 0 0 0 7px;
+    with:406px;
 }
 
 
@@ -2584,7 +2595,7 @@ float:left;
 }
 .totalPrice{
 font-weight:bold;
-width: 127px;
+width: 150px;
 padding-left: 10px;
 }
 .currencyText{
@@ -2633,11 +2644,12 @@ float: right;
 }
 .uc-cart-checkout-form .form-item input {
   padding: 10px 0 10px 0;
-  width: 270px;
-  border: 1px solid #DEE4E7;
+  width: 273px;
+  border: 2px solid #EEF1F2;
   border-radius: 5px 5px 5px 5px;
   -moz-border-radius: 5px 5px 5px 5px;
   -webkit-border-radius: 5px 5px 5px 5px;
+  margin: 0 0 0 10px;
 }
 .uc-cart-checkout-form .form-item span {
   line-height: 20px;
@@ -2703,6 +2715,7 @@ float: right;
 */
 .page-cart-checkout .paymentPane .chzn-single{
   width:265px !important;
+  margin: 0 0 0 10px;
   }
 .page-cart-checkout .paymentPane .chzn-single-with-drop {
   width:265px !important;
@@ -2712,8 +2725,8 @@ float: right;
   float:left;
  }
  .page-cart-checkout .chzn-drop{
-   width:253px !important;
-   
+   width:255px !important;
+   margin-left: 10px;
  }
  .page-search-result .cart_summ {
    height: 70px;
@@ -2742,6 +2755,7 @@ float: right;
  }
  .page-cart-checkout .paymentPane #billing-address-pane {
    padding-top: 15px;
+   padding-left: 1px;
  }
  .page-cart-checkout .paymentPane #edit-panes-billing-billing-postal-code {
    width: 110px;
@@ -2749,3 +2763,37 @@ float: right;
  .page-cart-checkout .paymentPane #edit-panes-payment-details-cc-cvv {
    width: 56px;
  }
+ .chzn-container-single .chzn-single div {
+    height: 28px!important;
+    width: 18px!important;
+}
+.chzn-container-single .chzn-single div b {
+    height: 65%!important;
+    width: 100%;
+}
+.page-cart-checkout .content {
+  -webkit-box-shadow: none!important;
+}
+.page-cart-checkout .chzn-drop .chzn-search input {
+  margin: 0px;
+}
+.chzn-container-active .chzn-single-with-drop {
+  background: none!important;
+}
+.front .chzn-container-active .chzn-single-with-drop, .page-search-result .chzn-container-active .chzn-single-with-drop { 
+  margin-left: -1px;
+}
+.chzn-container .chzn-drop {
+border-right: 1px solid #e9e9e9!important;
+border-left:  1px solid #e9e9e9!important;
+border-bottom: 1px solid #e9e9e9!important;
+}
+
+.chzn-container-single .chzn-single {
+  filter : none !important;
+ }
+
+.chzn-container-single .chzn-single DIV {
+   filter : none !important; 
+   
+}
