--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1041,8 +1041,14 @@ width:250px!important;
 padding:8px!important;
 }
 
+.skin-default{
+background: url("../images/slider-bg.png") no-repeat scroll 0 0 !important;
+width:498px;
+height:500px;
+}
 .views-slideshow-cycle-main-frame{
 top:6px;
+left:12px;
 z-index: 0;
 }
 .views-slideshow-cycle-main-frame .img
@@ -1205,7 +1211,7 @@ border-radius:0px;
     -webkit-border-radius:0px;
 	background:none!important;
 }
-.content ul.sf-menu li:hover div.main-arrow {
+.content ul.sf-menu li:hover div#main-arrow {
    background: url(../images/menu-arrow.png) no-repeat;
    width:14px;
    height:8px;
@@ -1217,7 +1223,7 @@ border-radius:0px;
    position:relative;
    z-index:999;
 }
-.content ul.sf-menu li:hover li#menu-450-1 div.main-arrow {
+.content ul.sf-menu li:hover li#menu-450-1 div#main-arrow {
 	display: none;
 }
 .sf-item-3 {
@@ -1931,7 +1937,7 @@ margin-top: 235px;
    height:469px;
 }
 
- .node_check_id,.node_cost,.authour_first_name{
+ #node_check_id,#node_cost,#authour_first_name{
 display:none!important;
 }
 .page-search-result .region-content .content table tr td{
@@ -2226,7 +2232,7 @@ ul#edit-file_filelist{
 }
 
 /* 13.03.2012 */
-.page-search-result .node_cost,.page-cart .node_cost {
+.page-search-result #node_cost,.page-cart #node_cost {
   background: url("../images/price-bg.png") no-repeat scroll left center transparent;
   color:#fff;
   font-size: 12px;
@@ -2995,8 +3001,18 @@ border-bottom: 1px solid #e9e9e9!important;
     text-align: left;
     width: 980px;
   }
-  
-  
-  
-  
+    
+  .mp_status_success {
+	background:url(../images/done.png) no-repeat scroll 0 0 transparent;
+        height : 25px;
+        width : 24px;  
+  }
+  .mp_status_failure {
+	background:url(../images/error.gif) no-repeat scroll 0 0 transparent;
+        height : 25px;
+        width : 24px;  
+  }
+ .chzn-container .chzn-results {
+    border: 1px solid #DEDEDE;
+  }
   
