Changed walkaway bold file name to correct font

--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1501,7 +1501,7 @@ padding:10px;
 }
 @font-face {
 	font-family: 'Walkway Bold';
-	src: url('../Walkway Bold.ttf');
+	src: url('../Walkway-Bold.ttf');
 	font-weight: normal;
 	font-style: normal;
 }
