--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1501,7 +1501,7 @@ padding:10px;
 }
 @font-face {
 	font-family: 'Walkway Bold';
-	src: url('../Walkway-Bold.ttf');
+	src: url('../Walkway Bold.ttf');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -1937,7 +1937,7 @@ margin-top: 235px;
    height:469px;
 }
 
- #node_check_id,#node_cost,#authour_first_name{
+ .node_check_id,.node_cost,.authour_first_name{
 display:none!important;
 }
 .page-search-result .region-content .content table tr td{
@@ -2232,7 +2232,7 @@ ul#edit-file_filelist{
 }
 
 /* 13.03.2012 */
-.page-search-result #node_cost,.page-cart #node_cost {
+.page-search-result .node_cost,.page-cart .node_cost {
   background: url("../images/price-bg.png") no-repeat scroll left center transparent;
   color:#fff;
   font-size: 12px;
@@ -3012,7 +3012,7 @@ border-bottom: 1px solid #e9e9e9!important;
         height : 25px;
         width : 24px;  
   }
- .chzn-container .chzn-results {
+  
+  .chzn-container .chzn-results {
     border: 1px solid #DEDEDE;
   }
-  
