--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -27,7 +27,6 @@
 }
 
 /*Design for check box in search results page*/
-.page-search-result label { display: block; cursor: pointer; line-height: 20px; padding-bottom: 26px; text-shadow: 0 -1px 0 rgba(0,0,0,.2); }
 
 .page-search-result .label_check    { background: url(images/checkbox.png) no-repeat; }
 .page-search-result label.c_on      { background: url(images/checkbox-hover.png) no-repeat; }
@@ -97,20 +96,33 @@ float:left;
 border-radius:5px;
 -webkit-border-radius:5px;
 -moz-border-radius:5px;
+margin-left:-7px;
+}
+#field-event label{
+	
+	color: rgb(148, 187, 31);
+	width:455px;
+	
 }
 
+#field-event .chzn-container {
+	font-size:18px;
+	}
+#field-number label{
+	
+	color: rgb(74, 176, 248);
+	width:200px;
+}
 .page-search-result .number_search {
-  margin-right: 18px !important;
+  	margin-right: 18px;
 }
 .page-search-result #edit-search
 {
-    margin-top:45px;
-    position: relative;
-    top: -50px;
+    margin-top:57px; 
 }
 .page-search-result .region-photo-search .content
 {
- min-height:0px;
+ 	min-height:0px;
 }
 .page-search-result #center
 {
@@ -152,7 +164,8 @@ width:420px;
   width:980px;
 }
 
-.page-search-result .form-item-events-select-runner
+.page-search-result .form-item-events-select-runner,
+.page-search-result .form-item-runner-number
 {
   float:left;
   padding:20px;
