--- a/sites/all/themes/runmemo/styles.css
+++ b/sites/all/themes/runmemo/styles.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   background: #edf5fa;
-  font: 76%/170% Arial, sans-serif;
+  font-family: Arial,Helvetica,sans-serif;
   color: #494949;
 }
 
@@ -30,7 +30,7 @@ h6 {
   margin: 0;
   padding: 0;
   font-weight: normal;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family:Arial,Helvetica,sans-serif;
 }
 
 h1 {
@@ -57,12 +57,6 @@ h5 {
 
 h6 {
   font-size: 110%;
-}
-
-quote,
-code,
-fieldset {
-  margin: .5em 0;
 }
 
 code,
@@ -496,7 +490,7 @@ body.two-sidebars #squeeze {
 }
 
 .block .content {
-  margin: 0.5em 0;
+ /* margin: 0.5em 0; */
 }
 
 #sidebar-first .block-region {
@@ -874,9 +868,9 @@ tr.even td.menu-disabled {
  * Collapsible fieldsets
  */
 fieldset {
-  margin: 1em 0;
+ /*  margin: 1em 0;
   padding: 1em;
- /* border: 1px solid #d9eaf5;*/
+ border: 1px solid #d9eaf5;*/
    border:none;
   /*background: #fff url(images/gradient-inner.png) repeat-x 0 0;*/
 }
