--- a/sites/all/modules/custom/photo_search/photo_search.css
+++ b/sites/all/modules/custom/photo_search/photo_search.css
@@ -63,23 +63,13 @@
 {
   color: #34373A;
 }
-.page-search-result .region-content .views-field-uc-product-image
-{
-   text-align:center;
-  height:100px;
-  position: relative;
-  top:-18px;
-}
+
 .page-search-result .right-corner
 {
    margin-right: -235px;
 }
 
-.page-search-result .region-content .content table tr td  {
-	border:1px solid #cccccc;
-	text-align:center;
- 	border: 0 none;
-}
+
 
 .page-search-result  #sidebar-second .block .content{
 float:left;
@@ -105,28 +95,42 @@ border-radius:5px;
 -moz-border-radius:5px;
 margin-left:-10px;
 }
-#field-event label{
-	
+#field-event label {
 	color: rgb(148, 187, 31);
-	width:455px;
-	
+	width:455px;	
 }
-
-#field-event .chzn-container {
-	font-size:18px;
-	}
 #field-number label{
 	
 	color: rgb(74, 176, 248);
 	width:200px;
 }
+#field-number label,
+#field-event label {
+	margin-bottom:3px;	
+}
+
+#field-event span.form-required,
+#field-number span.form-required {
+	display:none;
+}
+
+#field-event .chzn-container {
+	font-size:18px;
+	}
+
 .page-search-result .number_search {
   	margin-right: 18px;
 }
 .page-search-result #edit-search
 {
-    margin-top:57px; 
+    margin-top:44px; 
 }
+
+.page-search-result .form-item {
+	margin-top:0px;
+	margin-bottom:0px;
+	}
+
 .page-search-result .region-photo-search .content
 {
  	min-height:0px;
@@ -182,11 +186,6 @@ width:420px;
 padding:20px;
 }*/
 
-.page-search-result .region-content {
-	float: left;
-	clear:left;
-	display: block;
-	}
 .view-search-results {
 	float: left;
 	clear:left;
@@ -217,6 +216,35 @@ form#select-event-runner-get-photos {
 }
 
 
+/* *********** View with results ************* */
 
+.page-search-result .region-content {
+	float: left;
+	clear:left;
+	display: block;
+	}
 
+.page-search-result .region-content .view-content{
+    height: 640px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: 550px;
+    border: 1px solid #CCCCCC;
+}
+.page-search-result .region-content .view-content table{
+  margin:0px;
+}
 
+.page-search-result .region-content .views-field-uc-product-image
+{
+   text-align:center;
+  height:100px;
+  position: relative;
+  top:-18px;
+}
+
+.page-search-result .region-content .content table tr td  {
+	border:1px solid #cccccc;
+	text-align:center;
+ 	border: 0 none;
+}
