--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -927,22 +927,6 @@ margin-bottom:20px;
 
 
 
-
-#number_recent_event1, #number_recent_event2{
-	border: 1px solid #DEE4E7;
-    border-radius: 5px 5px 5px 5px;
-    color: #1A253C;
-    color: #1A253C;
-    font-family: Arial,Helvetica,sans-serif;
-    font-size: 13px;
-    height: 34px;-webkit-box-shadow: none !important; 
-	-moz-box-shadow: none !important; 
-	box-shadow: none !important;
-    padding: 2px;
-    text-indent: 7px;
-    width: 167px;
-	margin-left:8px;
-}
 #runner_number {
 	  margin-left: 0px!important;
 	  width:184px;
@@ -1618,7 +1602,6 @@ text-align:center;
     top: -53px;
 }
 
-/* For Recent event home page */
 .page-runner .content 
 {
     margin-bottom: 20px;
@@ -1633,6 +1616,34 @@ text-align:center;
     -moz-box-shadow:none!important;
     -webkit-box-shadow:none!important;
 }
+
+/* ****************** For Recent event home page ******************* */
+
+#recent-event1-image label {
+   display: none;
+}
+#recent-event2-image label {
+   display: none;
+}
+
+
+#number_recent_event1, #number_recent_event2{
+	border: 1px solid #DEE4E7;
+    border-radius: 5px 5px 5px 5px;
+    color: #1A253C;
+    color: #1A253C;
+    font-family: Arial,Helvetica,sans-serif;
+    font-size: 13px;
+    height: 34px;-webkit-box-shadow: none !important; 
+	-moz-box-shadow: none !important; 
+	box-shadow: none !important;
+    padding: 2px;
+    text-indent: 7px;
+    width: 167px;
+	margin-left:8px;
+}
+
+
 .page-runner .content #recent-event1-image div
 {
   margin-top: 0px;
@@ -1856,6 +1867,14 @@ text-align:justify;
 .chzn-container .chzn-results li{
   line-height: 18px;
 }
+
+.front .region-recent-event1-images img,.front .region-recent-event2-images img{
+  border-bottom: 1px solid #e0e0e0;
+  border-right : 1px solid #e0e0e0;
+  padding-bottom:2px;
+  padding-right: 2px;
+}
+
 .page-runner .region-recent-event1-images .view-content, .page-runner .region-recent-event2-images .view-content
 {
   margin-left: 4px;
@@ -1863,6 +1882,9 @@ text-align:justify;
   width: 431px;
   height:176px;
 }
+
+
+
 #select-event-runner-get-photos label {
     font-family: 'Walkway Bold',Arial,Helvetica,sans-serif;
     font-size: 20px;
@@ -1871,14 +1893,6 @@ text-align:justify;
     position:relative;
     
 }
-
-#recent-event1-image label {
-   display: none;
-}
-#recent-event2-image label {
-   display: none;
-}
-
 
 /* 06:03:12 */
 @font-face {
@@ -2104,12 +2118,7 @@ background: url("../images/cart-full.png") no-repeat scroll left center transpar
 }
 
 
-.front .region-recent-event1-images img,.front .region-recent-event2-images img{
-  border-bottom: 1px solid #e0e0e0;
-  border-right : 1px solid #e0e0e0;
-  padding-bottom:2px;
-  padding-right: 2px;
-}
+
 
 .page-cart .cart_table table tbody tr td {
   width: 145px;
