Finished refactoring of recent events regions.

--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -364,15 +364,7 @@ float:left;
         position: relative;
         min-height: 245px;
 }
-.cont-lft-header {
-	color:#444;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:14px;
-	text-align:center;
-	padding-top:20px;
-	padding-bottom:10px;
-	border-bottom:1px solid #dedede;
-}
+
 .find-palyers {
 	margin-left:10px;
 	margin-top:9px;
@@ -931,12 +923,8 @@ margin-bottom:20px;
 	  margin-left: 0px!important;
 	  width:184px;
 	}
-#number_recent_event1, #number_recent_event2
-{
-   width:160px!important;
-   line-height:25px;
-   height:25px!important;
-}
+	
+
    /*background: none repeat scroll 0 0 #F5F5F5;
 border: 1px solid #BFBFBF;
     color: #34373A;
@@ -1619,38 +1607,68 @@ text-align:center;
 
 /* ****************** For Recent event home page ******************* */
 
-#recent-event1-image label {
-   display: none;
-}
-#recent-event2-image label {
-   display: none;
+.recent-event-images
+{
+  margin-left: 4px;
+  float: left;
+  width: 431px;
+  height:176px;
 }
 
+.region-recent-events .title {
+	color:#444;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:14px;
+	text-align:center;
+	padding-top:20px;
+	padding-bottom:10px;
+	border-bottom:1px solid #dedede;
+}
 
-#number_recent_event1, #number_recent_event2{
+.region-recent-events img
+{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right:10px;
+  margin-left: 10px;
+  
+  border-bottom: 1px solid #e0e0e0;
+  border-right : 1px solid #e0e0e0;
+  padding-bottom:2px;
+  padding-right: 2px;
+}
+.region-recent-events form {
+	float:right;
+	width:230px;
+	display:block;
+	padding-bottom:5px;
+}
+.region-recent-events label {
+	/* hide label of the text field*/
+	display:none;
+}
+
+.region-recent-events .form-text {
+	width:100px;
+   	line-height:25px;
+   	height:25px;
 	border: 1px solid #DEE4E7;
     border-radius: 5px 5px 5px 5px;
     color: #1A253C;
-    color: #1A253C;
     font-family: Arial,Helvetica,sans-serif;
     font-size: 13px;
-    height: 34px;-webkit-box-shadow: none !important; 
+    -webkit-box-shadow: none !important; 
 	-moz-box-shadow: none !important; 
 	box-shadow: none !important;
     padding: 2px;
     text-indent: 7px;
-    width: 167px;
-	margin-left:8px;
+	margin-right:10px;
+	float:left;
+	
+
 }
 
-
-.page-runner .content #recent-event1-image div
-{
-  margin-top: 0px;
-  margin-right:10px;
-  margin-left: -4px;
-}
-.page-runner .content #recent-event1-image .form-submit
+.region-recent-events .form-submit
 {
   	margin-top:0px;
 	cursor:pointer;
@@ -1659,9 +1677,7 @@ text-align:center;
     cursor: pointer;
     height: 32px;
     width: 88px;
-}
-.page-runner .content #recent-event1-image .form-submit:hover, .page-runner .content #recent-event2-image .form-submit:hover {
-    background: url("../images/find-btn-hover.png") no-repeat scroll 0 0 transparent;
+    float:left;
 }
 
 r-event2
@@ -1669,21 +1685,7 @@ r-event2
   float:left;
   margin-right:10px;
 }
-.page-runner .content #recent-event2-image
-{
-  margin-top:-11px;
-  margin-left: -8px;
-}
-.page-runner .content #recent-event2-image .form-submit
-{
- 	 margin-top:11px;
-	cursor:pointer;
-    background: url("../images/find-btn.png") no-repeat scroll 0 0 transparent;
-    border: 0 none;
-    cursor: pointer;
-    height: 32px;
-    width: 88px;
-}
+
 
 .block .content
 {
@@ -1868,20 +1870,6 @@ text-align:justify;
   line-height: 18px;
 }
 
-.front .region-recent-event1-images img,.front .region-recent-event2-images img{
-  border-bottom: 1px solid #e0e0e0;
-  border-right : 1px solid #e0e0e0;
-  padding-bottom:2px;
-  padding-right: 2px;
-}
-
-.page-runner .region-recent-event1-images .view-content, .page-runner .region-recent-event2-images .view-content
-{
-  margin-left: 4px;
-  float: left;
-  width: 431px;
-  height:176px;
-}
 
 
 
