Moved event related code to new module - sport_event.

--- a/sites/all/themes/runmemo/styles.css
+++ b/sites/all/themes/runmemo/styles.css
@@ -1098,6 +1098,9 @@ tr.taxonomy-term-divider-bottom {
 .theme-selector .operations li {
   list-style-image: none;
 }
+.element-invisible {
+	diplay:none;
+	}
 
 /**
  * CSS support
